--- a/src/components/TodoComponents/Todo.css
+++ b/src/components/TodoComponents/Todo.css
@@ -11,3 +11,39 @@ body {
   background-color:pink;
   margin:100px;
 }
+.container-md{
+    border:2px solid black;
+    padding:50px;
+    display:flex;
+    justify-content: center;
+
+}
+/* 
+.todo-list{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: aqua;
+    margin:20px;
+    padding: 20px;
+    
+    
+}
+p{
+    background-color:white;
+    margin:20px;
+    height:50px;
+    padding:15px;
+    border-radius: 15px;
+    width: 200px;
+    
+}
+
+.item.completed{
+    
+    text-decoration: line-through;
+  }
+  .item.completed p {
+    background-color:gray;
+    
+  } */
