--- a/src/components/TodoComponents/Todo.css
+++ b/src/components/TodoComponents/Todo.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url("https://fonts.googleapis.com/css?family=Roboto");
 html,
 body {
   width: 100%;
@@ -8,76 +8,71 @@ body {
 }
 
 body {
-    
-    background-image: url(/images/todo.jpg);
-    background-position: 50%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-  margin:100px;
+  background-image: url(/images/todo.jpg);
+  background-position: 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  margin: 100px;
+  display:flex;
+  justify-content: center;
 }
 
 .header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 100px;
+}
+
+form {
+  display: flex;
+  justify-content: center;
+  margin: 20px;
+
+}
+.container-md {
+  border: 2px solid black;
+  padding: 50px;
+  display: flex;
+  justify-content: center;
+}
+
+.todo-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #113a4b;
+  opacity: 70%;
+  border-radius: 15px;
+  margin: 20px;
+  padding: 20px;
+  width: 800px;
+}
+p {
     display: flex;
-    flex-direction: column;
-    
-    justify-content: center;
-    margin-bottom: 20px;
-   
-    
-  }
-
-  form{
-      display:flex;
-      justify-content: center;
-   
-    margin:20px;
-  }
-.container-md{
-    border:2px solid black;
-  
-    padding:50px;
-    display:flex;
-    justify-content: center;
-
-
-}
-
-.todo-list{
-    display:flex;
-    flex-direction: column;
+    align-content: center;
     align-items: center;
-    background-color: #113a4b;
-    opacity: 70%;
-    border-radius: 15px;
-    margin:20px;
-    padding: 20px;
-    
-    
-}
-p{
-    background-color:white;
-   
-    margin:20px;
-    height:50px;
-    padding:15px;
-    border-radius: 15px;
-    width: 200px;
-    
+  background-color: white;
+  margin: 20px;
+  height: 170px;
+  padding: 15px;
+  border-radius: 15px;
+  width: 400px;
 }
 
-.item.completed{
-    
-    text-decoration: line-through;
-  }
-  .item.completed p {
-    background-color:rgb(66, 142, 174);
-    
-  }
- header{
-    border: 2px solid red;
-  }
-h2{
-    font-size:7rem;
-    color: white;
+.item.completed {
+  text-decoration: line-through;
+}
+.item.completed p {
+  background-color: rgb(66, 142, 174);
+}
+header {
+  border: 2px solid red;
+}
+h2 {
+  font-size: 5rem;
+  color: white;
+  margin:50px;
 }
